objects/Supplier_Product__c.object
<CustomObject>
    <fields>
        <fullName>Chemical_Fullname__c</fullName>
        <label>Chemical Fullname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chemical_Name__c</fullName>
        <label>Chemical Name For Long</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Price__c</fullName>
        <label>Last Approved Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Quantity__c</fullName>
        <label>Last Approved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Supplier Products</relationshipLabel>
        <relationshipName>Supplier_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation_Received_Per_Unit__c</fullName>
        <label>Quotation Received Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Location__c</fullName>
        <label>Shipping Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Products</relationshipLabel>
        <relationshipName>Supplier_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supplier Product</label>
    <nameField>
        <label>Chemical Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>